<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.myapplication.MainActivity">

    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:title="@string/menu_settings"
        app:showAsAction="never" />
    <item 
        android:id="@+id/menu_resetButton"
        android:orderInCategory="1"
        android:title="@string/menu_reset"/>
    <item 
        android:id="@+id/menu_lastValue"
        android:orderInCategory="2"
        android:title="@string/menu_LValue"/>
    <group 
        android:checkableBehavior="all"
        android:orderInCategory="3">
        <item
            android:id="@+id/menu_switchToTimer"
            android:title="@string/menu_switchToTimer"/>
        <item
	        android:id="@+id/menu_stayAwake"
	        android:title="@string/menu_sAwake"/>
        <item
            android:id="@+id/menu_darkMode"
            android:title="@string/menu_darkMode"/>
    </group>

</menu>